testsuite/tests/typing-objects/pr6383.compilers.reference
Characters 37-42:
  let f (x: #M.foo) = 0;;
             ^^^^^
Error: Unbound module M

